--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,98 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@import url("https://use.typekit.net/zpy2zmz.css");
+
+/* ./styles/globals.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  * {
+    @apply antialiased;
+  }
+  body {
+    @apply bg-dark text-white;
+  }
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+/* Typography Styles */
+@layer base {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  label {
+    @apply font-bold tracking-tight mb-2
+    transition-all duration-75;
+  }
+  h1 {
+    @apply font-display text-4xl md:text-5xl;
+  }
+  h2 {
+    @apply font-display text-3xl md:text-4xl;
+  }
+  h3 {
+    @apply font-display text-2xl md:text-3xl;
+  }
+  h4 {
+    @apply font-display text-xl md:text-2xl;
+  }
+  h5 {
+    @apply font-display text-lg md:text-xl;
+  }
+  h6 {
+    @apply font-display text-sm md:text-base;
+  }
+  p {
+    @apply font-body text-base mb-4 leading-relaxed
+    opacity-50 text-white;
+  }
+  a {
+    @apply font-semibold text-white opacity-50 hover:opacity-100 transition-all duration-200;
+  }
 }
 
-* {
-  box-sizing: border-box;
+/* Large Button */
+@layer components {
+  .btn-lg {
+    @apply inline-flex h-14 items-center px-8 justify-center
+    text-center
+    font-semibold rounded-sm
+    shadow-none;
+  }
+}
+
+/* Medium Button */
+@layer components {
+  .btn-md {
+    @apply inline-flex h-12 py-1 items-center justify-center px-6 flex-grow-0
+    text-center
+    font-semibold rounded-sm
+    shadow-none
+    text-base;
+  }
+}
+
+/* Small Button */
+@layer components {
+  .btn-sm {
+    @apply inline-flex h-12 items-center justify-center
+    px-5 flex-grow-0
+    text-center
+    font-semibold rounded-sm
+    shadow-none
+    text-sm;
+  }
+}
+/* Standard Buttons */
+@layer components {
+  .btn-brand {
+    @apply border-0
+    bg-brand
+    text-white
+    focus:outline-none
+    focus:ring-0
+    transition-all duration-150 ease-in-out;
+  }
 }
