--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,10 +21,8 @@
   h3,
   h4,
   h5,
-  h6,
-  label {
-    @apply font-bold tracking-tight mb-2
-    transition-all duration-75;
+  h6 {
+    @apply font-bold mb-2 tracking-tight;
   }
   h1 {
     @apply font-display text-4xl md:text-5xl;
@@ -44,12 +42,15 @@
   h6 {
     @apply font-display text-sm md:text-base;
   }
+  .small-text {
+    @apply text-sm font-semibold uppercase text-light;
+  }
   p {
     @apply font-body text-base mb-4 leading-relaxed
-    opacity-50 text-white;
+    text-light;
   }
   a {
-    @apply font-semibold text-white opacity-50 hover:opacity-100 transition-all duration-200;
+    @apply font-semibold text-brand opacity-100 transition-all duration-200;
   }
 }
 
@@ -88,8 +89,26 @@
 /* Standard Buttons */
 @layer components {
   .btn-brand {
-    @apply border-0
+    @apply border-2
     bg-brand
+    border-brand
+    hover:bg-brandAlt
+    hover:border-brandAlt
+    text-white
+    focus:outline-none
+    focus:ring-0
+    transition-all duration-150 ease-in-out;
+  }
+}
+
+/* Outline buttons */
+@layer components {
+  .btn-outline {
+    @apply border-2
+    bg-transparent
+    border-white
+    hover:border-brand
+    hover:bg-brand
     text-white
     focus:outline-none
     focus:ring-0
@@ -99,6 +118,14 @@
 
 @layer base {
   .selected {
-    @apply border-brand text-brand border-b-2 opacity-100;
+    @apply border-brand text-white border-b-2 opacity-100 hover:border-white;
+  }
+}
+
+@layer components {
+  input,
+  textarea {
+    @apply w-full bg-darker rounded-sm appearance-none border-0 p-4 text-white focus:outline-none
+    focus:ring-2 focus:ring-brand;
   }
 }
