--- a/styles/globals.css
+++ b/styles/globals.css
@@ -60,7 +60,8 @@
     @apply inline-flex h-14 items-center px-8 justify-center
     text-center
     font-semibold rounded-sm
-    shadow-none;
+    shadow-none
+   self-start transition-all duration-300 ease-in-out transform translate-y-0 group hover:-translate-y-1;
   }
 }
 
@@ -71,7 +72,8 @@
     text-center
     font-semibold rounded-sm
     shadow-none
-    text-base;
+    text-base
+    transition-all duration-300 ease-in-out transform translate-y-0 group hover:-translate-y-1;
   }
 }
 
@@ -83,7 +85,8 @@
     text-center
     font-semibold rounded-sm
     shadow-none
-    text-sm;
+    text-sm
+    transition-all duration-300 ease-in-out transform translate-y-0 group hover:-translate-y-1;
   }
 }
 /* Standard Buttons */
