--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,7 +50,13 @@
     text-light;
   }
   a {
-    @apply font-semibold text-brand opacity-100 transition-all duration-200;
+    @apply font-semibold text-brand opacity-100 transition-all duration-200 hover:text-white;
+  }
+}
+
+@layer base {
+  .underline-link {
+    @apply hover:border-brand border-b-2 border-transparent;
   }
 }
 
