--- a/styles/globals.css
+++ b/styles/globals.css
@@ -67,7 +67,7 @@
     text-center
     font-semibold rounded-sm
     shadow-none
-   self-start transition-all duration-150 ease-in-out transform translate-y-0 group hover:-translate-y-1;
+   self-start transition-all duration-150 ease-in-out transform translate-y-0 hover:-translate-y-1;
   }
 }
 
@@ -79,7 +79,7 @@
     font-semibold rounded-sm
     shadow-none
     text-base
-    transition-all duration-300 ease-in-out transform translate-y-0 group hover:-translate-y-1;
+    transition-all duration-300 ease-in-out transform translate-y-0 hover:-translate-y-1;
   }
 }
 
@@ -92,7 +92,7 @@
     font-semibold rounded-sm
     shadow-none
     text-sm
-    transition-all duration-150 ease-in-out transform translate-y-0 group hover:-translate-y-1;
+    transition-all duration-150 ease-in-out transform translate-y-0 hover:-translate-y-1;
   }
 }
 @layer components {
@@ -103,7 +103,7 @@
     font-semibold rounded-sm
     shadow-none
     text-sm
-    transition-all duration-150 ease-in-out transform translate-y-0 group hover:-translate-y-1;
+    transition-all duration-150 ease-in-out transform translate-y-0 hover:-translate-y-1;
   }
 }
 /* Standard Buttons */
