--- a/styles/globals.css
+++ b/styles/globals.css
@@ -54,6 +54,18 @@
   }
 }
 
+@layer components {
+  .nav-item {
+    @apply relative after:absolute after:bg-brand after:bottom-0 after:left-0 after:h-[2px] after:w-full after:origin-bottom-right after:transition-transform after:ease-in-out after:duration-300 font-bold leading-loose cursor-pointer text-light hover:text-white;
+  }
+  .nav-item.active {
+    @apply after:scale-x-0 hover:after:origin-bottom-left hover:after:scale-x-100;
+  }
+  .nav-item.current {
+    @apply after:scale-x-100 after:origin-bottom-left text-white;
+  }
+}
+
 @layer base {
   .underline-link {
     @apply hover:border-brand border-b-2 border-transparent;
