--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,7 +47,7 @@
   }
   p {
     @apply font-body text-base mb-4 leading-relaxed
-    dark:text-light text-mid;
+    dark:text-light text-dark;
   }
   a {
     @apply font-semibold text-brand opacity-100 transition-all duration-200 hover:text-white;
